--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Age calculator</title>
-    <link rel="stylesheet" href="style.css">
-
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        footer{
+            display: inline;
+        }
+        div{
+            padding-left: 500px;
+        }
+    </style>
+  </head>
+  <body>
+    <div>
+    <h2>Calculate Age</h2>
+    <br><br>
+    <form action="">
+      <tr>
+        <label for="">Select Age</label>
+        <input type="date" id="date" />
+      </tr>
+      <br /> <br>
+      <tr>
+        <button>Calculate Age</button>
+        <button>Reset</button>
+      </tr><br> <br>
+    </form>
+    <p>Calculated age is =</p>
+    <br><br>
+    <footer>
+        <a href="https://twitter.com/" target="_blank">  <i class="fa fa-twitter" aria-hidden="true"></i> </a> &nbsp; &nbsp;
+        <a href="https://in.linkedin.com/" target="_blank"> <i class="fa fa-linkedin-square" aria-hidden="true"></i></a>&nbsp; &nbsp;
+        <a href="https://www.facebook.com/"target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i> </a>&nbsp; &nbsp;
+        <a href="https://www.instagram.com/"target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> </a>
+         
+   
+</div>
+  </body>
 </html>
